--- a/SoundLove/SoundLove/Filter.storyboard
+++ b/SoundLove/SoundLove/Filter.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F25a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Y8f-0V-9MP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F19a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Y8f-0V-9MP">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -187,7 +187,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="trashButtonPressed:" destination="kuh-j2-70F" eventType="touchUpInside" id="sS3-UY-wwN"/>
+                                            <action selector="trashButtonPressed:" destination="XBO-2h-sYM" eventType="touchUpInside" id="5Zl-yK-s80"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ks-70-ufE" customClass="FilterButton">
@@ -336,6 +336,9 @@
                                         <state key="normal" image="filterTrashIcon">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="trashButtonPressed:" destination="qiA-hq-Te1" eventType="touchUpInside" id="AF2-1P-roy"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8v-md-LLx" customClass="FilterButton">
                                         <rect key="frame" x="10" y="0.0" width="246" height="50"/>
@@ -908,12 +911,12 @@
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fkh-xC-J7q">
-                                                <rect key="frame" x="264" y="7" width="46" height="30"/>
+                                                <rect key="frame" x="240" y="7" width="70" height="30"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="46" id="YDv-eP-Kyr"/>
+                                                    <constraint firstAttribute="width" constant="70" id="YDv-eP-Kyr"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="10"/>
-                                                <state key="normal" title="delete">
+                                                <state key="normal" title="Abbrechen">
                                                     <color key="titleColor" red="0.56862745100000001" green="0.87058823529999996" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </state>
@@ -925,7 +928,7 @@
                                                 </connections>
                                             </button>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Suche Deinen Ort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xlB-MR-skn">
-                                                <rect key="frame" x="38" y="7" width="216" height="30"/>
+                                                <rect key="frame" x="38" y="7" width="192" height="30"/>
                                                 <color key="tintColor" red="0.56862745100000001" green="0.87058823529999996" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="textColor" red="0.56862745100000001" green="0.87058823529999996" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="18"/>
@@ -1143,6 +1146,9 @@
                                         <state key="normal" image="filterTrashIcon">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="trashButtonPressed:" destination="AcZ-Cp-gdL" eventType="touchUpInside" id="rhP-PX-cV5"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y1K-Ri-egI" customClass="FilterButton">
                                         <rect key="frame" x="10" y="0.0" width="246" height="50"/>
