--- a/SoundLove/SoundLove/custom views/ArtistRecommendView.xib
+++ b/SoundLove/SoundLove/custom views/ArtistRecommendView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F19a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -24,8 +24,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fade your favs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="86" translatesAutoresizingMaskIntoConstraints="NO" id="wOe-RJ-oDl">
-                    <rect key="frame" x="117" y="424" width="86" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe um auszuwählen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="86" translatesAutoresizingMaskIntoConstraints="NO" id="wOe-RJ-oDl">
+                    <rect key="frame" x="84" y="424" width="152.5" height="16"/>
                     <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="13"/>
                     <color key="textColor" red="0.26666666666666666" green="0.29019607843137252" blue="0.36862745098039218" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -36,20 +36,20 @@
                         <constraint firstAttribute="height" constant="38" id="rpn-ne-f0A"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fade-out" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="55" translatesAutoresizingMaskIntoConstraints="NO" id="kZH-Qc-APV">
-                    <rect key="frame" x="5" y="513" width="55" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Überspringen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="70" translatesAutoresizingMaskIntoConstraints="NO" id="kZH-Qc-APV">
+                    <rect key="frame" x="5" y="513" width="70" height="21"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="55" id="5ud-u8-aAL"/>
+                        <constraint firstAttribute="width" constant="70" id="5ud-u8-aAL"/>
                         <constraint firstAttribute="height" constant="21" id="Wrr-vL-Iff"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="10"/>
                     <color key="textColor" red="0.55686274509803924" green="0.87450980392156863" blue="0.71764705882352942" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fade-in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="55" translatesAutoresizingMaskIntoConstraints="NO" id="YJ7-6T-tm6">
-                    <rect key="frame" x="260" y="513" width="55" height="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gefällt mir" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="70" translatesAutoresizingMaskIntoConstraints="NO" id="YJ7-6T-tm6">
+                    <rect key="frame" x="245" y="513" width="70" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="55" id="9N5-c4-qKw"/>
+                        <constraint firstAttribute="width" constant="70" id="9N5-c4-qKw"/>
                         <constraint firstAttribute="height" constant="20" id="j3u-Aj-J8F"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="10"/>
@@ -143,7 +143,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wir haben leider gerade keine empfohlenen Künstler vorliegen." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="190" translatesAutoresizingMaskIntoConstraints="NO" id="mcw-om-WjY">
-                                    <rect key="frame" x="50" y="144" width="190" height="51"/>
+                                    <rect key="frame" x="50" y="144" width="190" height="50.5"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="190" id="fRe-Yb-LlE"/>
                                     </constraints>
