--- a/SoundLove/SoundLove/Base.lproj/Main.storyboard
+++ b/SoundLove/SoundLove/Base.lproj/Main.storyboard
@@ -78,6 +78,7 @@
             <string>Montserrat-Regular</string>
             <string>Montserrat-Regular</string>
             <string>Montserrat-Regular</string>
+            <string>Montserrat-Regular</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -1858,9 +1859,16 @@
                                         <rect key="frame" x="0.0" y="428" width="320" height="40"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="cmz-9o-KKH">
-                                        <rect key="frame" x="30" y="200" width="260" height="69"/>
-                                        <string key="text">Deine Freunde-Liste ist leider leer, da bischer keine Freundezu diesem Konzert hinzugefügt wurden. lade jetzt Deine Freunde ein.</string>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="emptyKalendar" translatesAutoresizingMaskIntoConstraints="NO" id="Vmu-UE-Qfx">
+                                        <rect key="frame" x="112" y="81" width="96" height="96"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="3OU-if-1zv"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="w7K-qh-vUP"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="260" translatesAutoresizingMaskIntoConstraints="NO" id="cmz-9o-KKH">
+                                        <rect key="frame" x="30" y="192" width="260" height="85.5"/>
+                                        <string key="text">Deine Freundesliste ist leider leer, da bisher noch keine Freunde zu diesem Konzert hinzugefügt wurden. Lade deine Freunde jetzt ein.</string>
                                         <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
                                         <color key="textColor" red="0.56862745100000001" green="0.87058823529999996" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -1878,7 +1886,10 @@
                                     <constraint firstItem="2NK-6c-LyR" firstAttribute="leading" secondItem="GgQ-Sx-EP0" secondAttribute="leading" id="bgv-pS-Xtm"/>
                                     <constraint firstItem="cmz-9o-KKH" firstAttribute="leading" secondItem="GgQ-Sx-EP0" secondAttribute="leading" constant="30" id="gBV-7P-Siz"/>
                                     <constraint firstItem="2NK-6c-LyR" firstAttribute="top" secondItem="ELz-I7-8UA" secondAttribute="bottom" id="iCE-KX-4uj"/>
+                                    <constraint firstAttribute="centerX" secondItem="Vmu-UE-Qfx" secondAttribute="centerX" id="keG-kx-eHe"/>
                                     <constraint firstAttribute="centerY" secondItem="cmz-9o-KKH" secondAttribute="centerY" id="qwp-cl-UAl"/>
+                                    <constraint firstItem="cmz-9o-KKH" firstAttribute="top" secondItem="Vmu-UE-Qfx" secondAttribute="bottom" constant="15" id="waP-zw-b2H"/>
+                                    <constraint firstItem="Vmu-UE-Qfx" firstAttribute="top" relation="greaterThanOrEqual" secondItem="GgQ-Sx-EP0" secondAttribute="top" constant="10" id="yg3-Cf-gsC"/>
                                     <constraint firstAttribute="trailing" secondItem="cmz-9o-KKH" secondAttribute="trailing" constant="30" id="yrF-9y-5As"/>
                                 </constraints>
                             </view>
@@ -2293,7 +2304,7 @@ noch 40 Tage</string>
                                 <rect key="frame" x="0.0" y="50" width="320" height="468"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="80" id="rF9-Lh-yPp" customClass="FilterTableViewCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="80" id="rF9-Lh-yPp" customClass="FilterBandsTableViewCell">
                                         <rect key="frame" x="10" y="70" width="320" height="81"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rF9-Lh-yPp" id="oTg-nF-lb1">
@@ -2301,7 +2312,7 @@ noch 40 Tage</string>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="272" translatesAutoresizingMaskIntoConstraints="NO" id="ytJ-jS-7p6">
                                                     <rect key="frame" x="15" y="0.0" width="272" height="80"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                                    <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="18"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -2424,6 +2435,7 @@ noch 40 Tage</string>
         <image name="calendarIcon" width="40" height="40"/>
         <image name="closeButton" width="20" height="19"/>
         <image name="delete-trash" width="28" height="35"/>
+        <image name="emptyKalendar" width="96" height="96"/>
         <image name="favoriteConcertsIcon" width="43" height="42"/>
         <image name="info button" width="33" height="33"/>
         <image name="inviteIcon" width="41" height="39"/>
