--- a/SoundLove/SoundLove/custom views/ArtistRecommendView.xib
+++ b/SoundLove/SoundLove/custom views/ArtistRecommendView.xib
@@ -25,19 +25,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe um auszuwählen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="86" translatesAutoresizingMaskIntoConstraints="NO" id="wOe-RJ-oDl">
-                    <rect key="frame" x="84" y="424" width="152.5" height="16"/>
+                    <rect key="frame" x="84.5" y="424" width="152.5" height="16"/>
                     <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="13"/>
                     <color key="textColor" red="0.26666666666666666" green="0.29019607843137252" blue="0.36862745098039218" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="artistRecommendControl" translatesAutoresizingMaskIntoConstraints="NO" id="s8t-xh-ZtG">
-                    <rect key="frame" x="15" y="470" width="290" height="38"/>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="artistRecommendControl" translatesAutoresizingMaskIntoConstraints="NO" id="s8t-xh-ZtG">
+                    <rect key="frame" x="12" y="470" width="296" height="38"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="38" id="rpn-ne-f0A"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Überspringen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="70" translatesAutoresizingMaskIntoConstraints="NO" id="kZH-Qc-APV">
-                    <rect key="frame" x="5" y="513" width="70" height="21"/>
+                    <rect key="frame" x="2" y="513" width="70" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="5ud-u8-aAL"/>
                         <constraint firstAttribute="height" constant="21" id="Wrr-vL-Iff"/>
@@ -47,7 +47,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gefällt mir" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="70" translatesAutoresizingMaskIntoConstraints="NO" id="YJ7-6T-tm6">
-                    <rect key="frame" x="245" y="513" width="70" height="20"/>
+                    <rect key="frame" x="248" y="513" width="70" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="9N5-c4-qKw"/>
                         <constraint firstAttribute="height" constant="20" id="j3u-Aj-J8F"/>
@@ -57,7 +57,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6rV-6L-EoP" userLabel="circle wrapper view">
-                    <rect key="frame" x="15" y="114" width="290" height="290"/>
+                    <rect key="frame" x="15" y="113.5" width="290" height="290"/>
                     <subviews>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QbJ-lQ-PEL" userLabel="image wrapper view">
                             <rect key="frame" x="20" y="20" width="250" height="250"/>
@@ -177,7 +177,7 @@
                     </constraints>
                 </view>
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="leftSlide" translatesAutoresizingMaskIntoConstraints="NO" id="HiR-hr-YuN">
-                    <rect key="frame" x="143" y="455" width="33" height="69"/>
+                    <rect key="frame" x="143.5" y="455" width="33" height="69"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="33" id="57P-rC-mDf"/>
                         <constraint firstAttribute="height" constant="69" id="lfe-9g-ZwO"/>
@@ -193,8 +193,10 @@
                 <constraint firstAttribute="centerX" secondItem="wOe-RJ-oDl" secondAttribute="centerX" id="Kj0-jg-ymv"/>
                 <constraint firstItem="6rV-6L-EoP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="RmT-4T-otp"/>
                 <constraint firstItem="HiR-hr-YuN" firstAttribute="centerX" secondItem="s8t-xh-ZtG" secondAttribute="centerX" id="U78-cd-wDd"/>
+                <constraint firstItem="s8t-xh-ZtG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="12" id="Z8f-sW-m96"/>
                 <constraint firstItem="YJ7-6T-tm6" firstAttribute="trailing" secondItem="s8t-xh-ZtG" secondAttribute="trailing" constant="10" id="cXx-gY-fh7"/>
                 <constraint firstItem="HiR-hr-YuN" firstAttribute="centerY" secondItem="s8t-xh-ZtG" secondAttribute="centerY" id="dH4-Ds-gIL"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="s8t-xh-ZtG" secondAttribute="trailing" constant="12" id="fzF-ii-Uje"/>
                 <constraint firstAttribute="centerX" secondItem="s8t-xh-ZtG" secondAttribute="centerX" id="gMx-tp-clj"/>
                 <constraint firstItem="kZH-Qc-APV" firstAttribute="top" secondItem="s8t-xh-ZtG" secondAttribute="bottom" constant="5" id="jPO-BG-v17"/>
                 <constraint firstItem="s8t-xh-ZtG" firstAttribute="top" secondItem="wOe-RJ-oDl" secondAttribute="bottom" constant="30" id="n3F-us-Ve7"/>
@@ -220,7 +222,7 @@
         </view>
     </objects>
     <resources>
-        <image name="artistRecommendControl" width="290" height="38"/>
+        <image name="artistRecommendControl" width="335" height="42"/>
         <image name="leftSlide" width="33" height="69"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
